[gd_scene load_steps=17 format=2]

[ext_resource path="res://Systems/Classes/Artifact/Artifact2D.gd" type="Script" id=1]
[ext_resource path="res://Content/Artifacts/_shared_assets/background.png" type="Texture" id=2]
[ext_resource path="res://Content/Artifacts/_shared_assets/wind-directions/wind-directions_background.png" type="Texture" id=3]
[ext_resource path="res://Content/Artifacts/_shared_assets/wind-directions/wind-directions_south.png" type="Texture" id=4]
[ext_resource path="res://Content/Artifacts/_shared_assets/wind-directions/wind-directions_north-west.png" type="Texture" id=5]
[ext_resource path="res://_shared_scripts/FollowMouse2D.gd" type="Script" id=6]
[ext_resource path="res://_shared_resources/DropShadow/dropShadow.tres" type="Material" id=7]
[ext_resource path="res://Content/Artifacts/_shared_assets/wind-directions/wind-directions_south-east.png" type="Texture" id=8]
[ext_resource path="res://Content/Artifacts/_shared_assets/wind-directions/wind-directions_west.png" type="Texture" id=9]
[ext_resource path="res://Content/Artifacts/_shared_assets/wind-directions/wind-directions_east.png" type="Texture" id=10]
[ext_resource path="res://Content/Artifacts/_shared_assets/wind-directions/wind-directions_south-west.png" type="Texture" id=11]
[ext_resource path="res://Content/Artifacts/_shared_assets/wind-directions/wind-directions_north-east.png" type="Texture" id=12]
[ext_resource path="res://Content/Artifacts/_shared_assets/wind-directions/wind-directions_north.png" type="Texture" id=13]
[ext_resource path="res://Systems/Classes/UI/_shared_resources/Fonts/regular_df.tres" type="DynamicFont" id=14]

[sub_resource type="Animation" id=1]
resource_name = "toFaceB"
length = 0.5
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FaceA:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1 ), Vector2( 1e-05, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FaceB:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ), Vector2( 1e-05, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 9.05539

[node name="Artifact" type="Node2D"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 180, 310 )
scale = Vector2( 10, 10 )
script = ExtResource( 1 )

[node name="FaceA" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="FaceA"]
texture = ExtResource( 2 )
offset = Vector2( 0.5, 0.5 )
script = ExtResource( 6 )
follow_offset = Vector2( 1000, 500 )
factor = 0.0

[node name="Painting" type="Sprite" parent="FaceA"]
offset = Vector2( 0.5, 0.5 )
script = ExtResource( 6 )
follow_offset = Vector2( 1000, 500 )
factor = 0.01

[node name="Frame" type="Sprite" parent="FaceA"]
offset = Vector2( 0.5, 0.5 )
script = ExtResource( 6 )
follow_offset = Vector2( 1000, 500 )
factor = 0.03

[node name="Object" type="Sprite" parent="FaceA"]
material = ExtResource( 7 )
offset = Vector2( 0.5, 0.5 )
script = ExtResource( 6 )
follow_offset = Vector2( 1000, 500 )
factor = 0.05

[node name="FaceB" type="Node2D" parent="."]
scale = Vector2( 1e-05, 1 )
script = ExtResource( 6 )
follow_offset = Vector2( 1000, 500 )
factor = 0.0

[node name="World" type="Sprite" parent="FaceB"]
position = Vector2( -3.8147e-06, -1.90735e-06 )
texture = ExtResource( 3 )
offset = Vector2( 0.5, 0.5 )

[node name="NORTH" type="Sprite" parent="FaceB"]
visible = false
material = ExtResource( 7 )
position = Vector2( 1.90735e-06, 1.90735e-06 )
texture = ExtResource( 13 )
offset = Vector2( 0.5, 0.5 )

[node name="SOUTH" type="Sprite" parent="FaceB"]
visible = false
material = ExtResource( 7 )
position = Vector2( 1.90735e-06, 1.90735e-06 )
texture = ExtResource( 4 )
offset = Vector2( 0.5, 0.5 )

[node name="WEST" type="Sprite" parent="FaceB"]
visible = false
material = ExtResource( 7 )
position = Vector2( 1.90735e-06, 1.90735e-06 )
texture = ExtResource( 9 )
offset = Vector2( 0.5, 0.5 )

[node name="EAST" type="Sprite" parent="FaceB"]
visible = false
material = ExtResource( 7 )
position = Vector2( 1.90735e-06, 1.90735e-06 )
texture = ExtResource( 10 )
offset = Vector2( 0.5, 0.5 )

[node name="N_EAST" type="Sprite" parent="FaceB"]
visible = false
material = ExtResource( 7 )
position = Vector2( 1.90735e-06, 1.90735e-06 )
texture = ExtResource( 12 )
offset = Vector2( 0.5, 0.5 )

[node name="N_WEST" type="Sprite" parent="FaceB"]
visible = false
material = ExtResource( 7 )
position = Vector2( 1.90735e-06, 1.90735e-06 )
texture = ExtResource( 5 )
offset = Vector2( 0.5, 0.5 )

[node name="S_EAST" type="Sprite" parent="FaceB"]
visible = false
material = ExtResource( 7 )
position = Vector2( 1.90735e-06, 1.90735e-06 )
texture = ExtResource( 8 )
offset = Vector2( 0.5, 0.5 )

[node name="S_WEST" type="Sprite" parent="FaceB"]
visible = false
material = ExtResource( 7 )
position = Vector2( 1.90735e-06, 1.90735e-06 )
texture = ExtResource( 11 )
offset = Vector2( 0.5, 0.5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/toFaceB = SubResource( 1 )

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -18.0
margin_top = -31.0
margin_right = 19.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -13.0
margin_top = 20.0
margin_right = 252.0
margin_bottom = 67.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 14 )
text = "Secret found!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
